--- a/WebApplicationEXAM_N1/appsettings.json
+++ b/WebApplicationEXAM_N1/appsettings.json
@@ -1,4 +1,11 @@
 {
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ExamEntityDB;Integrated Security=True;"
+  },
+
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
